[gd_scene load_steps=23 format=2]

[ext_resource path="res://gui/screens/main_menu/assets/GUI.png" type="Texture" id=1]
[ext_resource path="res://music/Pixel 2.wav" type="AudioStream" id=2]
[ext_resource path="res://gui/screens/load_new_game/scene/LoadNewGame.gd" type="Script" id=3]
[ext_resource path="res://gui/screens/main_menu/fonts/MinimalPixel v2.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://gui/screens/register/assets/GUI.png" type="Texture" id=5]
[ext_resource path="res://gui/screens/load_new_game/assets/3.png" type="Texture" id=6]
[ext_resource path="res://gui/screens/load_new_game/assets/2.png" type="Texture" id=7]
[ext_resource path="res://gui/screens/load_new_game/assets/4.png" type="Texture" id=8]
[ext_resource path="res://gui/screens/load_new_game/assets/1.png" type="Texture" id=9]

[sub_resource type="DynamicFont" id=11]
size = 60
outline_size = 4
outline_color = Color( 0.0117647, 0.0117647, 0.0117647, 1 )
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
size = 30
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxTexture" id=8]
texture = ExtResource( 1 )
region_rect = Rect2( 145, 113, 46, 14 )

[sub_resource type="StyleBoxTexture" id=25]
texture = ExtResource( 1 )
region_rect = Rect2( 145, 113, 46, 14 )
modulate_color = Color( 1, 0.976471, 0.364706, 1 )

[sub_resource type="StyleBoxTexture" id=31]
texture = ExtResource( 5 )
region_rect = Rect2( 145, 98, 46, 13 )
modulate_color = Color( 0.698039, 0.701961, 1, 1 )

[sub_resource type="StyleBoxTexture" id=10]
texture = ExtResource( 1 )
region_rect = Rect2( 145, 81, 46, 14 )

[sub_resource type="StreamTexture" id=26]

[sub_resource type="StyleBoxTexture" id=9]
texture = ExtResource( 1 )
region_rect = Rect2( 145, 98, 46, 13 )

[sub_resource type="DynamicFont" id=12]
size = 32
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxTexture" id=13]
texture = ExtResource( 1 )
region_rect = Rect2( 145, 113, 46, 14 )

[sub_resource type="StyleBoxTexture" id=14]
texture = ExtResource( 1 )
region_rect = Rect2( 145, 98, 46, 13 )

[sub_resource type="StyleBoxTexture" id=15]
texture = ExtResource( 1 )
region_rect = Rect2( 145, 81, 46, 14 )

[sub_resource type="StreamTexture" id=16]

[node name="LoadNewGame" type="Node2D"]
z_index = -5
script = ExtResource( 3 )

[node name="BackgroundMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
autoplay = true

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_left = 3.0
margin_top = 4.0
margin_right = 1923.0
margin_bottom = 1084.0
grow_horizontal = 0
grow_vertical = 0
custom_constants/margin_right = 700
custom_constants/margin_top = 100
custom_constants/margin_left = 700
custom_constants/margin_bottom = 250

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 700.0
margin_top = 100.0
margin_right = 1220.0
margin_bottom = 830.0
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 140.0
margin_right = 520.0
margin_bottom = 590.0
rect_min_size = Vector2( 0, 450 )
size_flags_vertical = 0
custom_constants/separation = 10

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer"]
margin_right = 520.0
margin_bottom = 105.0
size_flags_horizontal = 3
size_flags_vertical = 7
custom_fonts/font = SubResource( 11 )
text = "Story Mode"
align = 1
valign = 1

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/VBoxContainer"]
margin_top = 115.0
margin_right = 520.0
margin_bottom = 220.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 100
custom_constants/margin_top = 0
custom_constants/margin_left = 100
custom_constants/margin_bottom = 1

[node name="New_game" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer"]
margin_left = 100.0
margin_right = 420.0
margin_bottom = 104.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 2 )
custom_styles/hover = SubResource( 8 )
custom_styles/focus = SubResource( 25 )
custom_styles/disabled = SubResource( 31 )
custom_styles/normal = SubResource( 10 )
text = "New game"
icon = SubResource( 26 )

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/VBoxContainer/VBoxContainer"]
margin_top = 230.0
margin_right = 520.0
margin_bottom = 335.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 100
custom_constants/margin_top = 0
custom_constants/margin_left = 100
custom_constants/margin_bottom = 1

[node name="Load_game" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer2"]
margin_left = 100.0
margin_right = 420.0
margin_bottom = 104.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 2 )
custom_styles/hover = SubResource( 8 )
custom_styles/pressed = SubResource( 9 )
custom_styles/focus = SubResource( 25 )
custom_styles/disabled = SubResource( 31 )
custom_styles/normal = SubResource( 10 )
text = "Load Game"
icon = SubResource( 26 )

[node name="MarginContainer3" type="MarginContainer" parent="MarginContainer/VBoxContainer/VBoxContainer"]
margin_top = 345.0
margin_right = 520.0
margin_bottom = 450.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 100
custom_constants/margin_top = 0
custom_constants/margin_left = 100
custom_constants/margin_bottom = 1

[node name="BackBT" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer3"]
self_modulate = Color( 1, 0, 0, 1 )
margin_left = 100.0
margin_right = 420.0
margin_bottom = 104.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/font_color = Color( 0.941176, 0.0705882, 0.0705882, 1 )
custom_fonts/font = SubResource( 12 )
custom_styles/hover = SubResource( 13 )
custom_styles/pressed = SubResource( 14 )
custom_styles/normal = SubResource( 15 )
text = "BACK"
icon = SubResource( 16 )

[node name="Sprite" type="Sprite" parent="MarginContainer/VBoxContainer"]
position = Vector2( -106, -30 )
scale = Vector2( 15.8182, 18.1364 )
z_index = -10
z_as_relative = false
texture = ExtResource( 1 )
centered = false
region_enabled = true
region_rect = Rect2( 2, 34, 44, 44 )

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="Layer1" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 1920, 0 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/Layer1"]
scale = Vector2( 3.33333, 3.33333 )
texture = ExtResource( 9 )
centered = false

[node name="Layer2" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 1920, 0 )

[node name="Sprite2" type="Sprite" parent="ParallaxBackground/Layer2"]
position = Vector2( -5.00003, -7.00003 )
scale = Vector2( 3.34549, 3.33642 )
texture = ExtResource( 7 )
centered = false

[node name="Layer3" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 1920, 0 )

[node name="Sprite3" type="Sprite" parent="ParallaxBackground/Layer3"]
scale = Vector2( 3.33333, 3.33333 )
texture = ExtResource( 6 )
centered = false

[node name="Layer4" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 1920, 0 )

[node name="Sprite4" type="Sprite" parent="ParallaxBackground/Layer4"]
scale = Vector2( 3.33333, 3.33333 )
texture = ExtResource( 8 )
centered = false

[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer/New_game" to="." method="_on_New_game_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer2/Load_game" to="." method="_on_Load_game_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer3/BackBT" to="." method="_on_BackBT_pressed"]
